force-app/main/default/objects/Proof_of_Concept__c/Proof_of_Concept__c.object-meta.xml
<CustomObject>
    <label>Proof of Concept</label>
    <nameField>
        <label>Proof of Concept Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proof of Concepts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>