force-app/main/default/objects/Proof_of_Concept__c/fields/CBD__c.field-meta.xml
<CustomField>
    <fullName>CBD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CBD</label>
    <type>Checkbox</type>
</CustomField>