force-app/main/default/objects/Proof_of_Concept__c/fields/CBD_of_Days__c.field-meta.xml
<CustomField>
    <fullName>CBD_of_Days__c</fullName>
    <label>CBD # of Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>