force-app/main/default/objects/Proof_of_Concept__c/fields/Completion_Report_Attached__c.field-meta.xml
<CustomField>
    <fullName>Completion_Report_Attached__c</fullName>
    <label>Completion Report</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Approval__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>