force-app/main/default/objects/Proof_of_Concept__c/fields/Cost_Description__c.field-meta.xml
<CustomField>
    <fullName>Cost_Description__c</fullName>
    <inlineHelpText>Travelling, Hardware, etc</inlineHelpText>
    <label>Cost Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>