force-app/main/default/objects/Proof_of_Concept__c/fields/Estimated_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>