force-app/main/default/objects/Proof_of_Concept__c/fields/Estimated_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>