force-app/main/default/objects/Proof_of_Concept__c/fields/FE__c.field-meta.xml
<CustomField>
    <fullName>FE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FE</label>
    <type>Checkbox</type>
</CustomField>