force-app/main/default/objects/Proof_of_Concept__c/fields/Hardware__c.field-meta.xml
<CustomField>
    <fullName>Hardware__c</fullName>
    <inlineHelpText>Who is providing the hardware? If NN, describe the hardware required.</inlineHelpText>
    <label>Hardware</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>