force-app/main/default/objects/Proof_of_Concept__c/fields/NN_Products__c.field-meta.xml
<CustomField>
    <fullName>NN_Products__c</fullName>
    <label>NN Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product</valueSetName>
    </valueSet>
</CustomField>