force-app/main/default/objects/Proof_of_Concept__c/fields/Number_of_Man_Days_Effort__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Man_Days_Effort__c</fullName>
    <formula>CBD_of_Days__c + FE_of_Days__c + SDE_of_Days__c + SDM_of_Days__c + SE_of_Days__c + Support_days__c + TSA_of_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Man Days Effort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>