force-app/main/default/objects/Proof_of_Concept__c/fields/Onsite_Support__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Support__c</fullName>
    <label>Onsite Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>