force-app/main/default/objects/Proof_of_Concept__c/fields/Onsite_Support_Details__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Support_Details__c</fullName>
    <inlineHelpText>Number of trips, number of days</inlineHelpText>
    <label>Onsite Support Details</label>
    <type>TextArea</type>
</CustomField>