force-app/main/default/objects/Proof_of_Concept__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Proof of Concepts (Partner)</relationshipLabel>
    <relationshipName>Proof_of_Concepts3</relationshipName>
    <type>Lookup</type>
</CustomField>