force-app/main/default/objects/Proof_of_Concept__c/fields/POC_Name__c.field-meta.xml
<CustomField>
    <fullName>POC_Name__c</fullName>
    <label>POC Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>