force-app/main/default/objects/Proof_of_Concept__c/fields/R_D_of_Days__c.field-meta.xml
<CustomField>
    <fullName>R_D_of_Days__c</fullName>
    <label>R&amp;D # of Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>