force-app/main/default/objects/Proof_of_Concept__c/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.OwnerId</field>
            <operation>equals</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales Manager</relationshipLabel>
    <relationshipName>Proof_of_Concepts1</relationshipName>
    <type>Lookup</type>
</CustomField>