force-app/main/default/objects/Proof_of_Concept__c/fields/SDE__c.field-meta.xml
<CustomField>
    <fullName>SDE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SDE</label>
    <type>Checkbox</type>
</CustomField>