force-app/main/default/objects/Proof_of_Concept__c/fields/SDM__c.field-meta.xml
<CustomField>
    <fullName>SDM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SDM</label>
    <type>Checkbox</type>
</CustomField>