force-app/main/default/objects/Proof_of_Concept__c/fields/SDM_of_Days__c.field-meta.xml
<CustomField>
    <fullName>SDM_of_Days__c</fullName>
    <label>SDM # of Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>