force-app/main/default/objects/Proof_of_Concept__c/fields/SE__c.field-meta.xml
<CustomField>
    <fullName>SE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SE</label>
    <type>Checkbox</type>
</CustomField>