force-app/main/default/objects/Proof_of_Concept__c/fields/Software__c.field-meta.xml
<CustomField>
    <fullName>Software__c</fullName>
    <inlineHelpText>OVA or QCOW2 to be delivered? Will it be installed remotely?</inlineHelpText>
    <label>Software</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>