force-app/main/default/objects/Proof_of_Concept__c/fields/Software_Request_Case__c.field-meta.xml
<CustomField>
    <fullName>Software_Request_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Software Request Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Proof of Concepts</relationshipLabel>
    <relationshipName>Proof_of_Concepts</relationshipName>
    <type>Lookup</type>
</CustomField>