force-app/main/default/objects/Proof_of_Concept__c/fields/SOW_Validated__c.field-meta.xml
<CustomField>
    <fullName>SOW_Validated__c</fullName>
    <label>SOW Validated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>