force-app/main/default/objects/Proof_of_Concept__c/fields/Special__c.field-meta.xml
<CustomField>
    <fullName>Special__c</fullName>
    <inlineHelpText>If there is any special requirement like live traffic, Try &amp; Buy and system has to installed at production level, some missing feature is required, or the plan is to run the POC with CR software and supported by R&amp;D and PM Etc.</inlineHelpText>
    <label>Special</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>