force-app/main/default/objects/Proof_of_Concept__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Approval__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Idle</fullName>
                <default>true</default>
                <label>Idle</label>
            </value>
            <value>
                <fullName>SDE or SE</fullName>
            </value>
            <value>
                <fullName>SOW</fullName>
            </value>
            <value>
                <fullName>Software Install and Config</fullName>
            </value>
            <value>
                <fullName>POC Test Execution</fullName>
            </value>
            <value>
                <fullName>PoC Maintenance</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
                <isActive>false</isActive>
                <label>Accepted</label>
            </value>
            <value>
                <fullName>Requested</fullName>
                <isActive>false</isActive>
                <label>Requested</label>
            </value>
            <value>
                <fullName>Software Image Creation</fullName>
                <isActive>false</isActive>
                <label>Software Image Creation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>