force-app/main/default/objects/Proof_of_Concept__c/fields/Success_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Success_Criteria__c</fullName>
    <label>Success Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>