force-app/main/default/objects/Proof_of_Concept__c/fields/Support__c.field-meta.xml
<CustomField>
    <fullName>Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Support</label>
    <type>Checkbox</type>
</CustomField>