force-app/main/default/objects/Proof_of_Concept__c/fields/Support_days__c.field-meta.xml
<CustomField>
    <fullName>Support_days__c</fullName>
    <label>Support # of Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>