force-app/main/default/objects/Proof_of_Concept__c/fields/SW_Image_Request_Attached__c.field-meta.xml
<CustomField>
    <fullName>SW_Image_Request_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SW Image Request Attached</label>
    <type>Checkbox</type>
</CustomField>