force-app/main/default/objects/Proof_of_Concept__c/fields/TSA__c.field-meta.xml
<CustomField>
    <fullName>TSA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TSA</label>
    <type>Checkbox</type>
</CustomField>