force-app/main/default/objects/Proof_of_Concept__c/fields/TSA_Manager__c.field-meta.xml
<CustomField>
    <fullName>TSA_Manager__c</fullName>
    <label>TSA Manager</label>
    <type>DateTime</type>
</CustomField>