force-app/main/default/objects/Proof_of_Concept__c/fields/Use_Cases_Scope__c.field-meta.xml
<CustomField>
    <fullName>Use_Cases_Scope__c</fullName>
    <inlineHelpText>Describe the high level use cases to be demonstrated for the associated customer.</inlineHelpText>
    <label>Use Cases/Scope</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>