force-app/main/default/objects/Proof_of_Concept__c/fields/VP_Solutions_and_Services__c.field-meta.xml
<CustomField>
    <fullName>VP_Solutions_and_Services__c</fullName>
    <label>VP Solutions and Services</label>
    <type>DateTime</type>
</CustomField>