force-app/main/default/objects/Proof_of_Concept__c/recordTypes/Proof_Of_Concept.recordType-meta.xml
<RecordType>
    <fullName>Proof_Of_Concept</fullName>
    <active>true</active>
    <label>Proof Of Concept</label>
</RecordType>