force-app/main/default/objects/Proof_of_Concept__c/validationRules/Reason_required_when_Status_closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_required_when_Status_closed</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
ISPICKVAL(  Status__c  , &quot;Closed&quot; ),
ISPICKVAL(   Reason__c   , &quot;&quot; )
)</errorConditionFormula>
    <errorMessage>When Status equals Closed, Reason is required</errorMessage>
</ValidationRule>